resolve border alignment on recipe hover

--- a/style/style-recipe-select.css
+++ b/style/style-recipe-select.css
@@ -108,7 +108,7 @@ body {
     text-align: center;
     padding: 0.7rem;
   
-    margin: 1rem auto;
+    margin: 2rem auto;
   
     border: 1px solid hsl(0, 0%, 50%);
     border-top: 1px solid hsl(0, 0%, 90%);
@@ -141,7 +141,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
+    margin-top: 2rem;
     gap: 20px;
   }
 
@@ -165,7 +165,7 @@ body {
   .recipe:hover::before {
     content: "";
     position: absolute;
-    margin-top: 0.7rem;
+    /* margin-top: 0.7rem; */
     height: 100%;
     width: 100%;
     border-radius: 20px;
@@ -219,11 +219,8 @@ body {
 .recipe figcaption {
   text-decoration: underline;
   margin-inline: 1rem;
-  margin-bottom: 1rem;
+
 }
 
-.small {
-  font-size: 0.5rem;
-}
 
 
