--- a/style/style.css
+++ b/style/style.css
@@ -92,7 +92,6 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: flex-start;
-  margin: 0.2rem;
 }
 
 /* Nav styling */
@@ -104,7 +103,7 @@ body {
   text-align: center;
   padding: 0.7rem;
 
-  margin: 1rem auto;
+  margin: 2rem auto;
 
   border: 1px solid hsl(0, 0%, 50%);
   border-top: 1px solid hsl(0, 0%, 90%);
